Better doc and first test

--- a/redis/templates/config.yaml
+++ b/redis/templates/config.yaml
@@ -2,34 +2,36 @@
 kind: ConfigMap
 apiVersion: v1
 metadata:
-  creationTimestamp: 2017-12-20T00:46:38Z
   name: {{ template "redis.fullname" . }}
 data:
+
+  #BEGIN master
   master.redis.conf: |-
     bind 0.0.0.0
     port {{ .Values.redis.port }}
-
     dir .
+
   master.sentinel.conf: |-
     bind 0.0.0.0
     port {{ .Values.sentinel.port }}
-
     sentinel monitor {{ template "redis.name" . }}-redis-cluster 127.0.0.1 {{ .Values.redis.port }} {{ .Values.sentinel.quorum }}
     sentinel down-after-milliseconds {{ template "redis.name" . }}-redis-cluster 5000
     sentinel parallel-syncs {{ template "redis.name" . }}-redis-cluster 1
     sentinel failover-timeout {{ template "redis.name" . }}-redis-cluster 10000
+  #END master
+
+  #BEGIN slave
   slave.redis.conf: |-
     bind 0.0.0.0
     port {{ .Values.redis.port }}
-
     dir .
-
     slaveof {{ .Release.Name }}-redis-0.{{ template "redis.fullname" . }} {{ .Values.redis.port }}
+
   slave.sentinel.conf: |-
     bind 0.0.0.0
     port {{ .Values.sentinel.port }}
-
     sentinel monitor {{ template "redis.name" . }}-redis-cluster {{ .Release.Name }}-redis-0.{{ template "redis.fullname" . }} {{ .Values.redis.port }} {{ .Values.sentinel.quorum }}
     sentinel down-after-milliseconds {{ template "redis.name" . }}-redis-cluster 5000
     sentinel parallel-syncs {{ template "redis.name" . }}-redis-cluster 1
     sentinel failover-timeout {{ template "redis.name" . }}-redis-cluster 10000
+  #END slave
