--- a/elasticsearch/templates/statefulset.yaml
+++ b/elasticsearch/templates/statefulset.yaml
@@ -18,7 +18,7 @@ spec:
         tier: backend
         component: es
     spec:
-      {{- if .Values.initData.enable }}
+      {{- if .Values.initData.enabled }}
       initContainers:
       - name: init-data
         image: {{ .Values.initData.image }}
