Fix bad documentation

--- a/postgres/values.yaml
+++ b/postgres/values.yaml
@@ -23,8 +23,8 @@ secret:
   ## Use secret store to set postgres user password
   ## ref: https://kubernetes.io/docs/concepts/configuration/secret/
   ##
-  # name:
-  # key:
+  # secretName:
+  # postgresPassword:
 
 
 ## Persist data to a persitent volume
