--- a/postgres/templates/statefulset.yaml
+++ b/postgres/templates/statefulset.yaml
@@ -10,7 +10,7 @@ metadata:
     heritage: {{ .Release.Service }}
 spec:
   serviceName: {{ template "postgres.fullname" . }}
-  replicas: {{ .Values.replicaCount }}
+  replicas: 1
   selector:
     matchLabels:
       app: {{ template "postgres.fullname" . }}
@@ -51,13 +51,13 @@ spec:
           value: {{ default "postgres" .Values.postgresUser | quote }}
         - name: POSTGRES_DB
           value: {{ default "postgres" .Values.postgresDatabase | quote }}
+        {{- if and .Values.secret.enabled }}
         - name: POSTGRES_PASSWORD
-          {{- if and .Values.secret.enabled (not .Values.postgresPassword) }}
           valueFrom:
             secretKeyRef:
               name: {{ .Values.secret.secretName }}
               key: {{ .Values.secret.postgresPassword }}
-          {{- end }}
+        {{- end }}
         - name: PGDATA
           value: /var/lib/postgresql/data/pgdata
         - name: POD_IP
