--- a/redis/templates/config.yaml
+++ b/redis/templates/config.yaml
@@ -12,9 +12,10 @@ data:
     dir .
 
   master.sentinel.conf: |-
+    # Host and port we will listen for requests on
     bind 0.0.0.0
     port {{ .Values.sentinel.port }}
-    sentinel monitor {{ template "redis.fullname" . }}-redis-cluster 127.0.0.1 {{ .Values.port }} {{ .Values.sentinel.quorum }}
+    sentinel monitor {{ template "redis.fullname" . }}-redis-cluster {{ .Release.Name }}-redis-0 {{ .Values.port }} {{ .Values.sentinel.quorum }}
     sentinel down-after-milliseconds {{ template "redis.fullname" . }}-redis-cluster 5000
     sentinel parallel-syncs {{ template "redis.fullname" . }}-redis-cluster 1
     sentinel failover-timeout {{ template "redis.fullname" . }}-redis-cluster 10000
