--- a/redis/templates/statefulset.yaml
+++ b/redis/templates/statefulset.yaml
@@ -18,6 +18,9 @@ spec:
         chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
         release: {{ .Release.Name }}
         heritage: {{ .Release.Service }}
+        {{- if .Values.template.labels }}
+{{ toYaml .Values.template.labels }}
+        {{- end }}
     spec:
       containers:
 
