--- a/elasticsearch/templates/service.yaml
+++ b/elasticsearch/templates/service.yaml
@@ -3,7 +3,8 @@ kind: Service
 metadata:
   name: {{ template "elasticsearch.fullname" . }}
   labels:
-    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
+    app: {{ template "elasticsearch.name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
@@ -11,8 +12,6 @@ spec:
   selector:
     app: {{ template "elasticsearch.name" . }}
     release: {{ .Release.Name }}
-    tier: backend
-    component: es
   ports:
   - protocol: {{ .Values.service.protocol }}
     name: {{ .Values.service.name }}
