--- a/elasticsearch/values.yaml
+++ b/elasticsearch/values.yaml
@@ -31,6 +31,13 @@ persistence:
   accessMode: ReadWriteOnce
   # size: 8Gi
 
+template:
+  labels: {}
+    # To define specific labels, uncomment the following lines, adjust them as
+    # necessary, and remove the curly braces after 'labels:'.
+    # tier: db
+    # component: es
+
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
