--- a/redis/values.yaml
+++ b/redis/values.yaml
@@ -7,3 +7,10 @@ sentinel:
   port: 26379
 
 image: "redis:3.2"
+
+template:
+  labels: {}
+    # To define specific labels, uncomment the following lines, adjust them as
+    # necessary, and remove the curly braces after 'labels:'.
+    # tier: db
+    # component: redis
