--- a/elasticsearch/templates/statefulset.yaml
+++ b/elasticsearch/templates/statefulset.yaml
@@ -18,7 +18,7 @@ spec:
         release: {{ .Release.Name }}
         heritage: {{ .Release.Service }}
         {{- if .Values.template.labels }}
-{{ toYaml .Values.template.labels }}
+{{ toYaml .Values.template.labels | indent 8 }}
         {{- end }}
     spec:
       {{- if .Values.initData.enabled }}
