--- a/redis/templates/statefulset.yaml
+++ b/redis/templates/statefulset.yaml
@@ -19,7 +19,7 @@ spec:
         release: {{ .Release.Name }}
         heritage: {{ .Release.Service }}
         {{- if .Values.template.labels }}
-{{ toYaml .Values.template.labels }}
+{{ toYaml .Values.template.labels | indent 8 }}
         {{- end }}
     spec:
       containers:
