--- a/redis/templates/service.yaml
+++ b/redis/templates/service.yaml
@@ -4,7 +4,7 @@ kind: Service
 metadata:
   name: {{ template "redis.fullname" . }}
   labels:
-    app: {{ template "redis.name" . }}
+    app: {{ template "redis.fullname" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -17,5 +17,5 @@ spec:
       name: redis
   clusterIP: None
   selector:
-    app: {{ template "redis.name" . }}
+    app: {{ template "redis.fullname" . }}
     release: {{ .Release.Name }}
