--- a/redis/templates/tests/test-connection-without-password.yaml
+++ b/redis/templates/tests/test-connection-without-password.yaml
@@ -10,7 +10,7 @@ spec:
     image: "{{ .Values.image }}"
     env:
     - name: REDIS_HOST
-      value: {{ template "redis.fullname" . }}-master
+      value: {{ .Release.Name }}-redis-0.{{ template "redis.fullname" . }}
     - name: REDIS_PORT
       value: "6379"
     command: ["sh", "-c", "redis-cli -h $REDIS_HOST -p $REDIS_PORT set foo=bar"]
