Add network policy on elasticsearch chart
The network policy is disable by default. When it's activate only the
pod with the correct label can join the elasticsearch. An optional
argument can be pass to allow any pod to join the elasticsearch.

--- a/elasticsearch/values.yaml
+++ b/elasticsearch/values.yaml
@@ -49,3 +49,15 @@ resources: {}
   # requests:
   #  cpu: 100m
   #  memory: 128Mi
+
+networkPolicy:
+    ## Enable creation of NetworkPolicy resources.
+    ##
+    enabled: false
+
+    ## The Policy model to apply. When set to false, only pods with the correct
+    ## client label will have network access to the port ElasticSearch is listening
+    ## on. When true, ElasticSearch will accept connections from any source
+    ## (with the correct destination port).
+    ##
+    # allowExternal:
