--- a/datadog/templates/rbac.yaml
+++ b/datadog/templates/rbac.yaml
@@ -35,7 +35,7 @@ rules:
     resources: ["jobs"]
     verbs: ["get","list"]
 
-  - apiGroups: ['extensions']
+  - apiGroups: ["extensions"]
     resources:
       - "replicasets"
       - "daemonsets"
