[elasticsearch] Change netpol pobSelector label
  Variable key label create new index in the log stack for each value.

--- a/elasticsearch/templates/network-policy.yaml
+++ b/elasticsearch/templates/network-policy.yaml
@@ -28,6 +28,6 @@ spec:
           release: {{ .Release.Name }}
     - podSelector:
         matchLabels:
-          {{ template "elasticsearch.fullname" . }}-client: "true"
+          elasticsearch-client: {{ template "elasticsearch.fullname" . }}
   {{- end }}
 {{- end }}
