[filebeat] Configure output in values

--- a/kubernetes-filebeat/templates/daemonset-master.yaml
+++ b/kubernetes-filebeat/templates/daemonset-master.yaml
@@ -9,11 +9,12 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
+  updateStrategy:
+    type: RollingUpdate
   template:
     metadata:
       labels:
         app: {{ template "kubernetes-filebeat.name" . }}
-        chart: {{ template "kubernetes-filebeat.chart" . }}
         release: {{ .Release.Name }}
         heritage: {{ .Release.Service }}
         profile: master
