--- a/kubernetes-filebeat/templates/daemonset-nodes.yaml
+++ b/kubernetes-filebeat/templates/daemonset-nodes.yaml
@@ -10,11 +10,12 @@ metadata:
   annotations:
     checksum/config: {{ include "conf_node" . | sha256sum }}
 spec:
+  updateStrategy:
+    type: RollingUpdate
   template:
     metadata:
       labels:
         app: {{ template "kubernetes-filebeat.name" . }}
-        chart: {{ template "kubernetes-filebeat.chart" . }}
         release: {{ .Release.Name }}
         heritage: {{ .Release.Service }}
         profile: node
