--- a/datadog/Chart.yaml
+++ b/datadog/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: "1.0"
+appVersion: "latest"
 description: Datadog agent chart
 name: datadog
-version: 0.1.0
+version: 0.1.1
