Add config/checksum to reload pod on configuration change

--- a/kubectl-oidc-helper/templates/deployment.yaml
+++ b/kubectl-oidc-helper/templates/deployment.yaml
@@ -14,6 +14,8 @@ spec:
       labels:
         app: {{ template "kubectl-oidc-helper.name" . }}
         release: {{ .Release.Name }}
+      annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
     spec:
       volumes:
       - name: config-volume
