Update log annotation

--- a/elasticsearch/templates/statefulset.yaml
+++ b/elasticsearch/templates/statefulset.yaml
@@ -13,9 +13,9 @@ spec:
   template:
     metadata:
       annotations:
-        io.collectbeat.logs.{{ template "elasticsearch.name" . }}/pattern: "^\[[0-9]{4}-[0-9]{2}-[0-9]{2}"
-        io.collectbeat.logs.{{ template "elasticsearch.name" . }}/negate: true
-        io.collectbeat.logs.{{ template "elasticsearch.name" . }}/match: after
+        log/pattern: "^\[[0-9]{4}-[0-9]{2}-[0-9]{2}"
+        log/negate: true
+        log/match: after
       labels:
         app: {{ template "elasticsearch.name" . }}
         chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
