Add endpoints to datadog permissions

--- a/datadog/templates/rbac.yaml
+++ b/datadog/templates/rbac.yaml
@@ -18,6 +18,7 @@ rules:
       - "namespaces"
       - "events"
       - "services"
+      - "endpoints"
     verbs: ["get", "list"]
 
   - apiGroups: [""]
