--- a/postgres/templates/statefulset.yaml
+++ b/postgres/templates/statefulset.yaml
@@ -1,3 +1,4 @@
+{{- $defaultSecretName := printf "%s-secret" .Release.Name }}
 ---
 apiVersion: apps/v1beta1
 kind: StatefulSet
@@ -86,7 +87,7 @@ spec:
         - name: POSTGRES_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: {{ .Values.secret.secretName }}
+              name: {{ default $defaultSecretName .Values.secret.secretName }}
               key: {{ .Values.secret.postgresPassword }}
         {{- end }}
         - name: PGDATA
