--- a/postgres/values.yaml
+++ b/postgres/values.yaml
@@ -9,7 +9,7 @@ image: "postgres:9.6"
 ## Specify a imagePullPolicy
 ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
 ##
-# imagePullPolicy:
+imagePullPolicy: IfNotPresent
 
 ## Specify imagePullSecrets
 ## ref: https://kubernetes.io/docs/concepts/containers/images/#specifying-imagepullsecrets-on-a-pod
