--- a/csp-handler/values.yaml
+++ b/csp-handler/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: jobteaser/csp-handler
-  tag: 0.1.0
+  tag: 0.2.0
   pullPolicy: IfNotPresent
 
 service:
@@ -39,3 +39,6 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+# secretKeyRef:
+#  name:
