Add newrelic configuration

--- a/csp-handler/templates/deployment.yaml
+++ b/csp-handler/templates/deployment.yaml
@@ -14,6 +14,8 @@ spec:
       app: {{ template "csp-handler.name" . }}
       release: {{ .Release.Name }}
   template:
+    annotations:
+      log/format: json
     metadata:
       labels:
         app: {{ template "csp-handler.name" . }}
@@ -24,6 +26,9 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command: ["/csp-handler", "serve", "-p", "3000"]
+          envFrom:
+            secretKeyRef:
+              name: {{ .Values.secretKeyRef.name }}
           ports:
             - name: http
               containerPort: 3000
