--- a/elasticsearch/templates/statefulset.yaml
+++ b/elasticsearch/templates/statefulset.yaml
@@ -13,7 +13,7 @@ spec:
   template:
     metadata:
       annotations:
-        log/pattern: "^\[[0-9]{4}-[0-9]{2}-[0-9]{2}"
+        log/pattern: "^\\[[0-9]{4}-[0-9]{2}-[0-9]{2}"
         log/negate: true
         log/match: after
       labels:
@@ -58,6 +58,8 @@ spec:
         image: {{ .Values.image }}
         ports:
         - containerPort: 9200
+        resources:
+{{ toYaml .Values.resources | indent 10 }}
         readinessProbe:
           httpGet:
             path: /_cluster/health?local=true
