Switch to awscli for mysql init-data
minio mc command often has incompatibilities with AWS S3:
- switching to awscli
- piping output to tar to avoid too much disk IO

--- a/mysql/values.yaml
+++ b/mysql/values.yaml
@@ -11,14 +11,12 @@ image: mysql:5.6
 
 initData:
   enabled: false
-  image: minio/mc:latest
+  image: jobteaser/awscli:latest
   # datafile:
   objectStorage: {}
     # To define object storage values, uncomment the following lines, adjust them as
     # necessary, and remove the curly braces after 'objectStorage:'.
-    # provider:
     # bucket:
-    # host:
     # We are looking for access-key-id and secret-access-key in this secret.
     # secretKeyRefName:
 
