--- a/mysql/values.yaml
+++ b/mysql/values.yaml
@@ -1,6 +1,12 @@
 # Default values for mysql.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+
+# Overrides for generated resource names
+# See templates/_helpers.tpl
+# nameOverride:
+# fullnameOverride:
+
 replicaCount: 1
 
 database: mysql
